# whoosh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATING.md  README.md  ROADMAP.md  TUTORIAL.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
benchmark/: README.md  regression.py
demo/: blog.html  django-full-text-search.html  fastapi-full-text-search.html  flask-full-text-search.html  index.html  is-whoosh-still-maintained.html  migrate-sqlite-fts5-to-whoosh.html  robots.txt  search-files-command-line.html  sitemap.xml  whoosh-analyzer-recipes.html  whoosh-autocomplete-prefix-search.html  whoosh-faceted-search-counts.html  whoosh-highlight-search-snippets.html  whoosh-incremental-index-sync.html  whoosh-langchain-retriever.html  whoosh-performance-tuning-fast-indexing.html  whoosh-python-3-importerror-fix.html  whoosh-rag-hybrid-search.html  whoosh-search-pandas-dataframe.html  whoosh-search-pdf-markdown-knowledge-base.html  whoosh-spelling-fuzzy-did-you-mean.html  whoosh-vs-elasticsearch.html  whoosh-vs-sqlite-fts5.html  whoosh-vs-tantivy.html  whoosh3-3.0.0-py2.py3-none-any.whl  whoosh3-3.0.1-py2.py3-none-any.whl  whoosh3-3.0.2-py2.py3-none-any.whl  whoosh3-3.0.3-py2.py3-none-any.whl  whoosh3-3.1.0-py2.py3-none-any.whl  whoosh3-3.3.0-py2.py3-none-any.whl
docs/source/: analysis.rst  batch.rst  cli.rst  comparison.rst  conf.py  cookbook.rst  dates.rst  facets.rst  fieldcaches.rst  highlight.rst  index.rst  indexing.rst  integrations.rst  intro.rst  keywords.rst  nested.rst  ngrams.rst  parsing.rst  query.rst  querylang.rst  quickstart.rst  recipes.rst  schema.rst  searching.rst  spelling.rst  stemming.rst  threads.rst
docs/source/api/: analysis.rst  classify.rst  reading.rst
docs/source/releases/: 1_0.rst  2_0.rst
examples/: autocomplete.py  benchmark_vs_sqlite.py  custom_analyzers.py  did_you_mean.py  django_app.py  faceted_search.py  fastapi_app.py  flask_app.py  highlighting.py  quickstart.py  resource_management.py  scoring_and_sorting.py  search_cli.py  static_site_search.py  tutorial.py
src/whoosh/: __init__.py  cli.py  collectors.py  colorize.py  fields.py  highlight.py  index.py  multiproc.py  py.typed  reading.py  scoring.py  searching.py  sorting.py  spelling.py  writing.py
src/whoosh/analysis/: __init__.py  filters.py  tokenizers.py
src/whoosh/codec/: memory.py  whoosh2.py  whoosh3.py
src/whoosh/filedb/: compound.py  filestore.py  structfile.py
src/whoosh/lang/: phonetic.py
src/whoosh/matching/: binary.py
src/whoosh/qparser/: __init__.py  dateparse.py  default.py  plugins.py  syntax.py
src/whoosh/query/: __init__.py  nested.py  positional.py  spans.py  terms.py  wrappers.py
src/whoosh/support/: bitvector.py
src/whoosh/util/: numeric.py  times.py
tests/: test_analysis.py  test_cli.py  test_codecs.py  test_collector.py  test_colorize.py  test_compound.py  test_dateparse.py  test_downstream_compat.py  test_fields.py  test_highlighting.py  test_indexing.py  test_matching.py  test_misc.py  test_mpwriter.py  test_nested.py  test_parsing.py  test_queries.py  test_reading.py  test_searching.py  test_site_version_sync.py  test_sorting.py  test_spans.py  test_spelling.py  test_typing.py  test_writing.py  typing_smoke.py
