[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whoosh3"
dynamic = ["version"]
description = "Fast, pure-Python full-text indexing, search, and spell-checking library — the actively maintained Whoosh, running on Python 3.9-3.14."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-2-Clause" }
keywords = ["index", "search", "text", "spell", "full-text", "bm25"]
authors = [
  { name = "Matt Chaput", email = "matt@whoosh.ca" },
]
maintainers = [
  { name = "Priya Sundaram" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Indexing",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "pre-commit"]

[project.scripts]
whoosh = "whoosh.cli:main"

[project.urls]
Homepage = "https://github.com/priya-sundaram-dev/whoosh"
Documentation = "https://priya-sundaram-dev.github.io/whoosh/"
Repository = "https://github.com/priya-sundaram-dev/whoosh"
Issues = "https://github.com/priya-sundaram-dev/whoosh/issues"
Changelog = "https://github.com/priya-sundaram-dev/whoosh/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
whoosh = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "whoosh.__version_str__" }

# ==========================================================================
# mypy: type-checker smoke config (gh#3).
#
# We do NOT type-check Whoosh's (still largely untyped) internals yet — that
# is tracked incrementally on gh#3. Instead CI type-checks tests/typing_smoke.py,
# a realistic downstream-usage snippet, to guard that the annotations on the
# public API stay present and correct for users' editors and mypy runs.
# ``follow_imports = "silent"`` means mypy still *reads* Whoosh's annotations
# (so the smoke file is genuinely checked against them) but does not report
# errors originating inside the not-yet-fully-typed internal modules.
# ==========================================================================

[tool.mypy]
# Type-check the public-API smoke fixture against a modern floor. Whoosh3 runs
# on 3.9+, but this only sets mypy's *checking target*; 3.10 keeps CI robust as
# newer mypy releases drop support for 3.9 as a target (gh#3).
python_version = "3.10"
files = ["tests/typing_smoke.py"]
follow_imports = "silent"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

# ==========================================================================
# Existing ruff / tooling config preserved below.
# ==========================================================================

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
  "AIR",    # Airflow
  "ASYNC",  # flake8-async
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "C90",    # McCabe cyclomatic complexity
  "DJ",     # flake8-django
  "DTZ",    # flake8-datetimez
  "EXE",    # flake8-executable
  "F",      # Pyflakes
  "FA",     # flake8-future-annotations
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "INT",    # flake8-gettext
  "LOG",    # flake8-logging
  "NPY",    # NumPy-specific rules
  "PERF",   # Perflint
  "PLC",    # Pylint conventions
  "PLE",    # Pylint errors
  "PLR091", # Pylint Refactor just for max-args, max-branches, etc.
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "SLOT",   # flake8-slots
  "TCH",    # flake8-type-checking
  "TID",    # flake8-tidy-imports
  "TRIO",   # flake8-trio
  "UP",     # pyupgrade
  "W",      # pycodestyle
  "YTT",    # flake8-2020
  # "A",    # flake8-builtins
  # "ANN",  # flake8-annotations
  # "ARG",  # flake8-unused-arguments
  # "B",    # flake8-bugbear
  # "COM",  # flake8-commas
  # "CPY",  # flake8-copyright
  # "D",    # pydocstyle
  # "E",    # pycodestyle
  # "EM",   # flake8-errmsg
  # "ERA",  # eradicate
  # "FBT",  # flake8-boolean-trap
  # "FIX",  # flake8-fixme
  # "FLY",  # flynt
  # "FURB", # refurb
  # "INP",  # flake8-no-pep420
  # "ISC",  # flake8-implicit-str-concat
  # "N",    # pep8-naming
  # "PD",   # pandas-vet
  # "PGH",  # pygrep-hooks
  # "PIE",  # flake8-pie
  # "PL",   # Pylint
  # "PT",   # flake8-pytest-style
  # "PTH",  # flake8-use-pathlib
  # "RET",  # flake8-return
  # "RSE",  # flake8-raise
  # "RUF",  # Ruff-specific rules
  # "S",    # flake8-bandit
  # "SIM",  # flake8-simplify
  # "SLF",  # flake8-self
  # "T10",  # flake8-debugger
  # "T20",  # flake8-print
  # "TD",   # flake8-todos
  # "TRY",  # tryceratops
]
ignore = [
  "EXE001",
  "F401",
  "F811",
  "F841",
  "PERF203",
  "UP031",
]

[tool.ruff.lint.mccabe]
max-complexity = 45  # Default is 10

[tool.ruff.lint.per-file-ignores]
"src/whoosh/compat.py" = ["F821"]
"src/whoosh/filedb/filestore.py" = ["UP024"]
"src/whoosh/util/__init__.py" = ["F821"]

[tool.ruff.lint.pylint]
max-args = 22  # Default is 5
max-branches = 79  # Default is 12
max-returns = 16  # Default is 6
max-statements = 256  # Default is 50
